[package]
name = "jet"
version = "0.2.0"
description = "Jet Lending Program"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "jet"
doctest = false

[features]
no-entrypoint = []
no-idl = []
devnet = ["anchor-spl/devnet"]
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { git = "https://github.com/jet-lab/anchor" }
anchor-spl = { git = "https://github.com/jet-lab/anchor", features = ["dex"] }
solana-program = "1.7"
thiserror = "1.0"
bytemuck = { version = "1.7", features = ["derive"] }
pyth-client = "0.2"
jet-math = { path = "../../libraries/math" }
jet-proc-macros = { path = "../../libraries/proc-macros" }
static_assertions = "1.1.0"
bitflags = "1.3"